--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: albertoval99/webactions:latest
+          tags: albertoval99/javascript-games:latest
             
